--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ruoyi",
   "version": "3.8.5",
-  "description": "若依管理系统",
-  "author": "若依",
+  "description": "北省管理系统",
+  "author": "北省",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
