--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "js-beautify": "1.13.0",
     "js-cookie": "3.0.1",
     "jsencrypt": "3.0.0-rc.1",
+    "less-loader": "^5.0.0",
     "nprogress": "0.2.0",
     "quill": "1.3.7",
     "screenfull": "5.0.2",
@@ -79,6 +80,7 @@
     "sass-loader": "10.1.1",
     "script-ext-html-webpack-plugin": "2.1.5",
     "svg-sprite-loader": "5.1.1",
+    "vue-particles": "^1.0.9",
     "vue-template-compiler": "2.6.12"
   },
   "engines": {
